--- a/configs/config_0.json
+++ b/configs/config_0.json
@@ -2,5 +2,6 @@
     "name": "Barkhausen/Turmlabor",
     "lat": 51.026107,
     "lon": 13.623566,
-    "station_id": 0
+    "station_id": 0,
+    "region": "dresden"
 }
