--- a/configs/config_2.json
+++ b/configs/config_2.json
@@ -1,6 +1,6 @@
 {
-    "name": "",
-    "lat": 0,
-    "lon": 0,
-    "station_id": 3
+    "name": "Chemnitz 1",
+    "lat": 50.822755,
+    "lon": 12.933914,
+    "station_id": 2
 }
