nix flake update

--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -3,5 +3,5 @@
     "lat": 51.0810632,
     "lon": 13.7280758,
     "id": "61ef8e8b-f4d8-4d1d-8fa8-1a1d3d48888e",
-    "region": "de:14612"
+    "region": 14612000
 }
