--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -2,6 +2,6 @@
     "name": "Zentralwerk",
     "lat": 51.0810632,
     "lon": 13.7280758,
-    "id": "61ef8e8b-f4d8-4d1d-8fa8-1a1d3d48888e",
-    "region": 14612000
+    "id": "8aa034af-3545-4c36-b235-17e46cad6f07",
+    "region": 0
 }
