update turmlabor station config to new format

--- a/configs/config_0.json
+++ b/configs/config_0.json
@@ -2,6 +2,6 @@
     "name": "Barkhausen/Turmlabor",
     "lat": 51.027105,
     "lon": 13.723606,
-    "station_id": 0,
-    "region": "dresden"
+    "id": "64afe4d2-c834-44f2-926f-da6e7533f237",
+    "region": 0
 }
