--- a/configs/config_2.json
+++ b/configs/config_2.json
@@ -2,5 +2,6 @@
     "name": "Chemnitz 1",
     "lat": 50.822755,
     "lon": 12.933914,
-    "station_id": 2
+    "id": "579efcd8-52c1-493e-b3b2-3c4614c3429b",
+    "region": 1
 }
