--- a/configs/config_3.json
+++ b/configs/config_3.json
@@ -1,5 +1,5 @@
 {
-    "name": "Wundstr. 9",
+    "name": "underground",
     "lat": 0,
     "lon": 0,
     "id": "00000000-0000-0000-0000-000000000000",
