update traffic-stop-box-3 config

--- a/configs/config_3.json
+++ b/configs/config_3.json
@@ -1,7 +1,7 @@
 {
-    "name": "underground",
-    "lat": 0,
-    "lon": 0,
-    "id": "00000000-0000-0000-0000-000000000000",
+    "name": "Zentralwerk",
+    "lat": 51.0810632,
+    "lon": 13.7280758,
+    "id": "582867ae-668f-4995-bc7f-65f76cfae56a",
     "region": 0
 }
