--- a/.github/workflows/flake-check.yml
+++ b/.github/workflows/flake-check.yml
@@ -8,4 +8,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v17
-      - run: nix flake check
+      - run: nix flake --option allow-import-from-derivation 1 check
