--- a/.github/workflows/flake-check.yml
+++ b/.github/workflows/flake-check.yml
@@ -6,6 +6,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: cachix/install-nix-action@v17
-      - run: nix flake --option allow-import-from-derivation 1 check
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v31
+      - run: nix flake check --show-trace
